--- a/src/views/index.html
+++ b/src/views/index.html
@@ -19,7 +19,7 @@
         </header>
 
         <main>
-            <h1>Seu marketplace de coleta de resíduos</h1>
+            <h1>Coleta de Resíduos de forma Sustentável</h1>
                 
             <p>Ajudamos pessoas a encontrarem pontos de coleta de forma eficiente.</p>
         
